# tally

./: .gitignore  CLAUDE.md  LICENSE  README.md  TESTING.md  package-lock.json  package.json  tally-prd.md
.github/workflows/: release.yml
docs/plans/: 2026-03-25-activity-calendar-design.md  2026-03-25-activity-calendar-implementation.md  2026-03-25-tally-logo-design.md  2026-03-25-tally-logo-implementation.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  model_prices.json
src-tauri/src/commands/: dashboard.rs  mod.rs  sessions.rs  settings.rs  sync.rs
src-tauri/src/db/: cost_defaults.rs  migrations.rs  mod.rs  models.rs  queries.rs
src-tauri/src/parsers/: mod.rs  normalize.rs  registry.rs
src-tauri/src/parsers/claude/: jsonl.rs  mod.rs  session_index.rs  stats_cache.rs
src-tauri/src/parsers/cline/: json.rs  mod.rs
src-tauri/src/parsers/codex/: jsonl.rs  mod.rs  sqlite.rs
src-tauri/src/parsers/openclaw/: mod.rs
src-tauri/src/parsers/opencode/: mod.rs
src/components/charts/: DailyUsageChart.tsx
src/components/dashboard/: BiggestSessions.tsx  Heatmap.tsx  ModelBreakdown.tsx  SessionFeed.tsx  StatCards.tsx  TopProjects.tsx
src/components/layout/: AppLayout.tsx  (+2 more)
src/contexts/: SourceContext.tsx
src/hooks/: useDashboard.ts  useSessions.ts  useSync.ts
src/lib/: constants.ts  format.test.ts  format.ts  tauri.ts  types.ts
src/pages/: Home.tsx  Sessions.tsx  Settings.tsx  Setup.tsx  ToolDashboard.tsx
src/styles/: fonts.css  index.css
(+9 files in other folders)
