[package]
name = "tally"
version = "0.2.0"
description = "AI CLI Token Usage Tracker"
authors = ["you"]
edition = "2021"

[lib]
name = "tally_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
log = "0.4"
env_logger = "0.11"
thiserror = "2"
glob = "0.3"
uuid = { version = "1", features = ["v4"] }
